# Repak-X

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LINUX_MOD_NAME_BUG.md  README.md
.github/workflows/: release.yml
repak-x/: Cargo.toml  build.rs  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.ts
repak-x/capabilities/: default.json
repak-x/src/: App.css  App.tsx  install_mod.rs  main.tsx  main_tauri.rs  utils.rs
repak-x/src/components/: ChangelogModal.css  ContextMenu.css  ContextMenu.tsx  CreditsPanel.tsx  CustomDropdown.css  CustomDropdown.tsx  DropZoneOverlay.tsx  ExtensionModOverlay.tsx  FolderTree.tsx  HeroFilterDropdown.css  InputPromptModal.css  InputPromptModal.tsx  InstallModPanel.css  InstallModPanel.tsx  ModDetailsPanel.css  ModDetailsPanel.tsx  ModsList.tsx  OnboardingTour.tsx  SettingsPanel.tsx  SharingPanel.css  SharingPanel.tsx  TitleBar.tsx  ToolsPanel.tsx  UpdateAppModal.css  UpdateAppModal.tsx  UpdateModModal.tsx
repak-x/src/components/ui/: ShineBorder.css
repak-x/src/hooks/: useAprilFools.ts  useGlobalTooltips.ts
repak-x/src/install_mod/: install_mod_logic.rs
repak-x/src/install_mod/install_mod_logic/: iotoc.rs  pak_files.rs
repak-x/src/modules/vfx-updater/: VfxUpdater.css  VfxUpdaterPage.tsx  VfxUpdaterPanel.tsx  types.ts
repak-x/src/modules/vfx-updater/hooks/: usePipeline.ts
repak-x/src/modules/vfx-updater/lib/: filter.ts
repak-x/src/modules/vfx-updater/lib/colors/: applyColors.ts  extractColors.ts  index.ts
repak-x/src/vfx_updater/: commands.rs  file_ops.rs  logging.rs  mod.rs  models.rs  pipeline.rs  progress.rs  uasset_tool.rs
repak-x/wix/: main.wxs
scripts/: Build-Submodule.ps1  Init-Submodule.ps1  Push-Submodule.ps1  Update-Submodule.ps1
scripts/Repak-X_scripts/: build_and_package.ps1  build_contributor.ps1  push_backend.ps1  push_frontend.ps1
uasset_toolkit/uasset_app/: build.rs
uasset_toolkit/uasset_app/src/: lib.rs
