[workspace]
resolver = "2"
members = ["repak", "repak-x", "uasset_toolkit/uasset_app"]

[workspace.package]
repository = "https://github.com/XzantGaming/Repak-X"
authors = ["Xzant", "Saturn"]
license = "MIT"
version = "1.2.0"
edition = "2021"
keywords = ["marvel-rivals","unreal-engine", "pak", "unrealpak"]


[profile.release]
lto = "thin"
strip = true
opt-level = 3

[workspace.dependencies]
aes = "0.8.4"
base64 = "0.22.1"
strum = { version = "0.26", features = ["derive"] }
sha1 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.dev]
incremental = true
codegen-units = 256
lto = false
opt-level = 0
debug = 1

[profile.dev.package."*"]
opt-level = 0